--- a/main/LewaPower+.apk/res/values-sk/arrays.xml
+++ b/main/LewaPower+.apk/res/values-sk/arrays.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
     <string-array name="screen_timeout_values">
         <item>15000</item>
         <item>30000</item>
@@ -34,6 +34,6 @@
     </string-array>
     <string-array name="sp_mode">
         <item>Úspora energie</item>
-        <item>Režim spánku budíka</item>
+        <item>Režim spánku budíku</item>
     </string-array>
 </resources>
