--- a/main/LewaLauncherX.apk/res/values-cs/arrays.xml
+++ b/main/LewaLauncherX.apk/res/values-cs/arrays.xml
@@ -4,20 +4,20 @@
         <item>Standardní</item>
         <item>Standardní (bez překročení)</item>
         <item>Tablet</item>
-        <item>Zoom In</item>
-        <item>Zoom Out</item>
-        <item>Rotate Up</item>
-        <item>Rotate Down</item>
-        <item>Spin</item>
-        <item>Flip</item>
-        <item>Cube In</item>
-        <item>Cube Out</item>
-        <item>Stack</item>
-        <item>Accordion</item>
-        <item>Cylinder in</item>
-        <item>Cylinder out</item>
-        <item>Carousel left</item>
-        <item>Carousel right</item>
+        <item>Zvětšování</item>
+        <item>Zmenšování</item>
+        <item>Otáčení nahoru</item>
+        <item>Otáčení dolu</item>
+        <item>Přetočení </item>
+        <item>Převrácení</item>	
+        <item>Uvnitř kostky</item>
+        <item>Vně kostky</item>
+        <item>Štos</item>
+        <item>Harmonika</item>
+        <item>Cylindr uvnitř</item>
+        <item>Cylinder vně</item>
+        <item>Kolotoč vlevo</item>		
+        <item>Kolotoč vpravo</item>		
     </string-array>
     <string-array name="desktop_transition_effect_values">
         <item>Standard</item>
