--- a/main/Settings.apk/res/values-sk/arrays.xml
+++ b/main/Settings.apk/res/values-sk/arrays.xml
@@ -318,8 +318,8 @@
         <item>Systém sa rozhodne</item>
     </string-array>
     <string-array name="app_install_location_values">
-        <item>zariadenie</item>
-        <item>SD karta</item>
+        <item>device</item>
+        <item>sdcard</item>
         <item>auto</item>
     </string-array>
     <string-array name="long_press_timeout_selector_titles">
@@ -338,9 +338,9 @@
         <item>Vždy kontrolovať</item>
     </string-array>
     <string-array name="hdcp_checking_values">
-        <item>nikdy</item>
-        <item>iba drm</item>
-        <item>vždy</item>
+        <item>never</item>
+        <item>drm-only</item>
+        <item>always</item>
     </string-array>
     <string-array name="hdcp_checking_summaries">
         <item>Nepoužívať kontrolu HDCP</item>
