--- a/main/Settings.apk/res/values-hu/arrays.xml
+++ b/main/Settings.apk/res/values-hu/arrays.xml
@@ -1,28 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string-array name="nightmode_entries">
-		<item>fekete</item>
-		<item>piros</item>
-		<item>sárga</item>
-	</string-array>
     <string-array name="timezone_filters">
         <item>Amerika</item>
         <item>Európa</item>
         <item>Afrika</item>
         <item>Ázsia</item>
         <item>Ausztrália</item>
-		<item>Csendes-óceán</item>
-		<item>Összes</item>    
+        <item>Csendes-óceán</item>
+        <item>Összes</item>    
     </string-array>
+    <string-array name="nightmode_entries">
+        <item>fekete</item>
+        <item>piros</item>
+        <item>sárga</item>
+    </string-array>			
+    <string-array name="date_format_values">
+        <item></item>
+        <item>MM-dd-yyyy</item>
+        <item>dd-MM-yyyy</item>
+        <item>yyyy-MM-dd</item>
+        <item>EE-MMM-d-yyyy</item>
+        <item>EE-d-MMM-yyyy</item>
+        <item>yyyy-MMM-d-EE</item>
+    </string-array>            
     <string-array name="screen_timeout_entries">
         <item>15 másodperc</item>
         <item>30 másodperc</item>
         <item>1 perc</item>
         <item>2 perc</item>
         <item>5 perc</item>
-		<item>10 perc</item>
-        <item>30 perc</item>        
+        <item>10 perc</item>
+        <item>30 perc</item> 
     </string-array>
+    <string-array name="screen_timeout_values">
+        <item>15000</item>
+        <item>30000</item>
+        <item>60000</item>
+        <item>120000</item>
+        <item>300000</item>
+        <item>600000</item>
+        <item>1800000</item>
+    </string-array>	
     <string-array name="dream_timeout_entries">
         <item>Soha</item>
         <item>15 másodperc</item>
@@ -33,24 +51,49 @@
         <item>10 perc</item>
         <item>30 perc</item>
     </string-array>
+    <string-array name="dream_timeout_values">
+        <item>0</item>
+        <item>15000</item>
+        <item>30000</item>
+        <item>60000</item>
+        <item>120000</item>
+        <item>300000</item>
+        <item>600000</item>
+        <item>1800000</item>
+    </string-array>	
     <string-array name="lock_after_timeout_entries">
         <item>Azonnal</item>
         <item>5 másodperc</item>
         <item>15 másodperc</item>
         <item>30 másodperc</item>
         <item>1 perc</item>
-	<item>2 perc</item>
+        <item>2 perc</item>
         <item>5 perc</item>
         <item>10 perc</item>
         <item>30 perc</item>
     </string-array>
-        
-  
+    <string-array name="lock_after_timeout_values">
+        <item>0</item>
+        <item>5000</item>
+        <item>15000</item>
+        <item>30000</item>
+        <item>60000</item>
+        <item>120000</item>
+        <item>300000</item>
+        <item>600000</item>
+        <item>1800000</item>
+    </string-array>
     <string-array name="entries_font_size">
         <item>Kicsi</item>
         <item>Normál</item>
         <item>Nagy</item>
         <item>Extra nagy</item>
+    </string-array>
+    <string-array name="entryvalues_font_size">
+        <item>0.9</item>
+        <item>1.0</item>
+        <item>1.1</item>
+        <item>1.15</item>
     </string-array>
     <string-array name="tts_rate_entries">
         <item>Nagyon lassú</item>
@@ -59,12 +102,26 @@
         <item>Gyors</item>
         <item>Nagyon gyors</item>
     </string-array>
+    <string-array name="tts_rate_values">
+        <item>60</item>
+        <item>80</item>
+        <item>100</item>
+        <item>150</item>
+        <item>200</item>
+    </string-array>
     <string-array name="tts_pitch_entries">
         <item>Nagyon alacsony</item>
         <item>Alacsony</item>
         <item>Normál</item>
         <item>Magas</item>
         <item>Nagyon magas</item>
+    </string-array>
+    <string-array name="tts_pitch_values">
+        <item>50</item>
+        <item>80</item>
+        <item>100</item>
+        <item>120</item>
+        <item>150</item>
     </string-array>
     <string-array name="tts_demo_strings">
         <item>This is an example of speech synthesis in English.</item>
@@ -171,17 +228,22 @@
     <string-array name="app_install_location_entries">
         <item>Belső tárhely</item>
         <item>Eltávolítható SD-kártya</item>
-		<item>Döntse el a rendszer</item>
-    </string-array>   
+	<item>Döntse el a rendszer</item>
+    </string-array>
     <string-array name="long_press_timeout_selector_titles">
-		<item>Rövid</item>
-		<item>Közepes</item>
-		<item>Hosszú</item>
+	<item>Rövid</item>
+	<item>Közepes</item>
+	<item>Hosszú</item>
     </string-array>
     <string-array name="hdcp_checking_titles">
         <item>Ellenőrzés soha</item>
         <item>Csak DRM-tartalom ellenőrzése</item>
         <item>Ellenőrzés mindig</item>
+    </string-array>
+    <string-array name="hdcp_checking_values">
+        <item>never</item>
+        <item>drm-only</item>
+        <item>always</item>
     </string-array>
     <string-array name="hdcp_checking_summaries">
         <item>Soha ne használjon HDCP ellenőrzést</item>
@@ -205,8 +267,7 @@
         <item>Animáció mérete: 2x</item>   
         <item>Animáció mérete: 5x</item>
         <item>Animáció mérete: 10x</item>
-    </string-array>
-    
+    </string-array>  
     <string-array name="app_process_limit_entries">
 	<item>Normál korlátozás</item>
         <item>Nincsenek háttérfolyamatok</item>
@@ -214,8 +275,7 @@
         <item>Legfeljebb 2 folyamat</item>
         <item>Legfeljebb 3 folyamat</item>
         <item>Legfeljebb 4 folyamat</item>
-    </string-array>
-        
+    </string-array>        
     <string-array name="vpn_types">
         <item>PPTP</item>
         <item>L2TP/IPSec PSK</item>
@@ -236,23 +296,19 @@
         <item>Szétkapcsolva</item>
         <item>Inicializálás...</item>
         <item>Csatlakozás…</item>
-	<item>Csatlakoztatva</item>
-	<item>Időtúllépés</item>
+        <item>Csatlakoztatva</item>
+        <item>Időtúllépés</item>
         <item>Sikertelen</item>
-    </string-array>
-        
-        
+    </string-array>    
     <string-array name="haptic_feedback_level_entries">
-  	<item>Gyenge</item>
+        <item>Gyenge</item>
         <item>Közepes</item>
         <item>Erős</item>
     </string-array>  
     <string-array name="battery_style_entries">
         <item>Grafikus</item>
 	    <item>Százalék</item>
-    </string-array>
-        
-    
+    </string-array> 
     <string-array name="usb_connection_mode_entries">
         <item>Mindig kérdezzen rá</item>
         <item>Csak töltés</item>
@@ -291,9 +347,7 @@
         <item>10 másodperc</item>
         <item>20 másodperc</item>
  	<item>Mindig</item>
-    </string-array>
-        
-        
+    </string-array>     
     <string-array name="screen_color_title">
         <item>Meleg</item>
         <item>Természetes</item>
@@ -308,7 +362,6 @@
         <item>GPS által biztosított idő használata</item>
         <item>Kikpacsolva</item>
     </string-array>
-
     <string-array name="gemini_sim_roaming_reminder_entries">
         <item>Egyszer</item>
         <item>Mindíg</item>
