--- a/main/Settings.apk/res/values-cs/arrays.xml
+++ b/main/Settings.apk/res/values-cs/arrays.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
-	<string-array name="nightmode_entries">
-		<item>černá</item>
-		<item>červená</item>
-		<item>žlutá</item>
-	</string-array>
+<resources>
     <string-array name="timezone_filters">
         <item>Amerika</item>
         <item>Evropa</item>
@@ -14,6 +9,15 @@
         <item>Pacifik</item>
         <item>Všechny</item>
     </string-array>
+    <string-array name="date_format_values">
+        <item></item>
+        <item>MM-dd-yyyy</item>
+        <item>dd-MM-yyyy</item>
+        <item>yyyy-MM-dd</item>
+        <item>EE-MMM-d-yyyy</item>
+        <item>EE-d-MMM-yyyy</item>
+        <item>yyyy-MMM-d-EE</item>
+    </string-array>
     <string-array name="screen_timeout_entries">
         <item>15 sekund</item>
         <item>30 sekund</item>
@@ -22,6 +26,15 @@
         <item>5 minut</item>
         <item>10 minut</item>
         <item>30 minut</item>
+    </string-array>
+    <string-array name="screen_timeout_values">
+        <item>15000</item>
+        <item>30000</item>
+        <item>60000</item>
+        <item>120000</item>
+        <item>300000</item>
+        <item>600000</item>
+        <item>1800000</item>
     </string-array>
     <string-array name="dream_timeout_entries">
         <item>Nikdy</item>
@@ -33,6 +46,16 @@
         <item>10 minut</item>
         <item>30 minut</item>
     </string-array>
+    <string-array name="dream_timeout_values">
+        <item>0</item>
+        <item>15000</item>
+        <item>30000</item>
+        <item>60000</item>
+        <item>120000</item>
+        <item>300000</item>
+        <item>600000</item>
+        <item>1800000</item>
+    </string-array>
     <string-array name="lock_after_timeout_entries">
         <item>Okamžitě</item>
         <item>5 sekund</item>
@@ -43,6 +66,17 @@
         <item>5 minut</item>
         <item>10 minut</item>
         <item>30 minut</item>
+    </string-array>
+    <string-array name="lock_after_timeout_values">
+        <item>0</item>
+        <item>5000</item>
+        <item>15000</item>
+        <item>30000</item>
+        <item>60000</item>
+        <item>120000</item>
+        <item>300000</item>
+        <item>600000</item>
+        <item>1800000</item>
     </string-array>
     <string-array name="entries_font_size">
         <item>Malý</item>
@@ -63,12 +97,26 @@
         <item>Rychle</item>
         <item>Velmi rychle</item>
     </string-array>
+    <string-array name="tts_rate_values">
+        <item>60</item>
+        <item>80</item>
+        <item>100</item>
+        <item>150</item>
+        <item>200</item>
+    </string-array>
     <string-array name="tts_pitch_entries">
         <item>Velmi pomalu</item>
         <item>Pomalu</item>
         <item>Středne</item>
         <item>Rychle</item>
         <item>Velmi rychle</item>
+    </string-array>
+    <string-array name="tts_pitch_values">
+        <item>50</item>
+        <item>80</item>
+        <item>100</item>
+        <item>120</item>
+        <item>150</item>
     </string-array>
     <string-array name="tts_demo_strings">
         <item>This is an example of speech synthesis in English.</item>
@@ -169,10 +217,20 @@
         <item>Pouze pokud je připojen</item>
         <item>Nikdy</item>
     </string-array>
+    <string-array name="wifi_sleep_policy_values">
+        <item>2</item>
+        <item>1</item>
+        <item>0</item>
+    </string-array>
     <string-array name="wifi_frequency_band_entries">
         <item>Auto</item>
         <item>5 GHz iba</item>
         <item>2.4 GHz iba</item>
+    </string-array>
+    <string-array name="wifi_frequency_band_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
     </string-array>
     <string-array name="usage_stats_display_order_types">
         <item>Čas béhu</item>
@@ -204,6 +262,11 @@
         <item>Výstraha</item>
         <item>Vibrovat</item>
     </string-array>
+    <string-array name="emergency_tone_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
     <string-array name="special_locale_codes">
         <item>zh_CN</item>
         <item>zh_TW</item>
@@ -218,15 +281,31 @@
         <item>CHAP</item>
         <item>PAP alebo CHAP</item>
     </string-array>
+    <string-array name="apn_auth_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
     <string-array name="apn_protocol_entries">
         <item>IPv4</item>
         <item>IPv6</item>
         <item>IPv4/IPv6</item>
     </string-array>
+    <string-array name="apn_protocol_values">
+        <item>IP</item>
+        <item>IPV6</item>
+        <item>IPV4V6</item>
+    </string-array>
     <string-array name="bearer_entries">
         <item>LTE</item>
         <item>eHRPD</item>
         <item>Nespecifikováno</item>
+    </string-array>
+    <string-array name="bearer_values">
+        <item>14</item>
+        <item>13</item>
+        <item>0</item>
     </string-array>
     <string-array name="app_install_location_entries">
         <item>Vnitřní paměť</item>
@@ -237,6 +316,11 @@
         <item>Krátké</item>
         <item>Střední</item>
         <item>Dlouhé</item>
+    </string-array>
+    <string-array name="long_press_timeout_selector_values">
+        <item>500</item>
+        <item>1000</item>
+        <item>1500</item>
     </string-array>
     <string-array name="hdcp_checking_titles">
         <item>Nikdy nekontrolovat</item>
@@ -250,12 +334,21 @@
     </string-array>
     <string-array name="window_animation_scale_entries">
         <item>Animace vypnuta</item>
-        <item>Animace měřítko  .5x</item>
-        <item>Animace měřítko  1x</item>
-        <item>Animace měřítko  1.5x</item>
-        <item>Animace měřítko  2x</item>
-        <item>Animace měřítko  5x</item>
-        <item>Animace měřítko  10x</item>
+        <item>Animace měřítko .5x</item>
+        <item>Animace měřítko 1x</item>
+        <item>Animace měřítko 1.5x</item>
+        <item>Animace měřítko 2x</item>
+        <item>Animace měřítko 5x</item>
+        <item>Animace měřítko 10x</item>
+    </string-array>
+    <string-array name="window_animation_scale_values">
+        <item>0</item>
+        <item>.5</item>
+        <item>1</item>
+        <item>1.5</item>
+        <item>2</item>
+        <item>5</item>
+        <item>10</item>
     </string-array>
     <string-array name="transition_animation_scale_entries">
         <item>Animace vypnuta</item>
@@ -266,6 +359,15 @@
         <item>Animace měřítko 5x</item>
         <item>Animace měřítko 10x</item>
     </string-array>
+    <string-array name="transition_animation_scale_values">
+        <item>0</item>
+        <item>.5</item>
+        <item>1</item>
+        <item>1.5</item>
+        <item>2</item>
+        <item>5</item>
+        <item>10</item>
+    </string-array>
     <string-array name="animator_duration_scale_entries">
         <item>Animace vypnuta</item>
         <item>Animace měřítko .5x</item>
@@ -275,18 +377,14 @@
         <item>Animace měřítko 5x</item>
         <item>Animace měřítko 10x</item>
     </string-array>
-    <string-array name="overlay_display_devices_entries">
-        <item>None</item>
-        <item>720x480 mdpi</item>
-        <item>1280x720 tvdpi</item>
-        <item>1920x1080 xhdpi</item>
-        <item>1280x720 tvdpi and 1920x1080 xhdpi</item>
-    </string-array>
-    <string-array name="enable_opengl_traces_entries">
-        <item>None</item>
-        <item>Logcat</item>
-        <item>Systrace (Graphics)</item>
-        <item>Call stack on glGetError</item>
+    <string-array name="animator_duration_scale_values">
+        <item>0</item>
+        <item>.5</item>
+        <item>1</item>
+        <item>1.5</item>
+        <item>2</item>
+        <item>5</item>
+        <item>10</item>
     </string-array>
     <string-array name="app_process_limit_entries">
         <item>Standardní limit</item>
@@ -295,6 +393,14 @@
         <item>Nejvíce 2 procesy</item>
         <item>Nejvíce 3 procesy</item>
         <item>Nejvíce 4 procesy</item>
+    </string-array>
+    <string-array name="app_process_limit_values">
+        <item>-1</item>
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
     </string-array>
     <string-array name="vpn_types">
         <item>PPTP</item>
@@ -327,14 +433,20 @@
         <item>Šimpanz</item>
         <item>Opice</item>
     </string-array>
-    <string-array name="security_settings_premium_sms_values">
-        <item>Ptát se</item>
-        <item>Nikdy nepovolit</item>
-        <item>Vždy povolit</item>
+    <string-array name="user_content_ratings_values">
+        <item>5</item>
+        <item>4</item>
+        <item>3</item>
+        <item>2</item>
+        <item>1</item>
     </string-array>
     <string-array name="battery_style_entries">
         <item>Grafika</item>
         <item>Procenta</item>
+    </string-array>
+    <string-array name="battery_style_values">
+        <item>0</item>
+        <item>1</item>
     </string-array>
     <string-array name="core_nums_strs">
         <item>Single-core</item>
@@ -345,20 +457,82 @@
         <item>SIM 1</item>
         <item>SIM 2</item>
     </string-array>
+    <string-array name="nightmode_entries">
+        <item>černá</item>
+        <item>červená</item>
+        <item>žlutá</item>
+    </string-array>
+    <string-array name="simguide_datauseage">
+        <item>MB/Měsíc</item>
+        <item>GB/Měsíc</item>
+    </string-array>
+    <string-array name="led_freq_entries">
+        <item>2 sekundy</item>
+        <item>3 sekundy</item>
+        <item>4 sekundy</item>
+        <item>5 sekundy</item>
+        <item>6 sekundy</item>
+        <item>7 sekundy</item>
+        <item>8 sekundy</item>
+        <item>9 sekundy</item>
+    </string-array>
+    <string-array name="led_freq_values">
+        <item>2000</item>
+        <item>3000</item>
+        <item>4000</item>
+        <item>5000</item>
+        <item>6000</item>
+        <item>7000</item>
+        <item>8000</item>
+        <item>9000</item>
+    </string-array>
+    <string-array name="led_color_values">
+        <item>blue</item>
+        <item>red</item>
+        <item>yellow</item>
+        <item>green</item>
+        <item>cyan</item>
+        <item>white</item>
+        <item>\#FFAA00AA</item>
+    </string-array>
+    <string-array name="led_color_entries">
+        <item>Modrá</item>
+        <item>Červená</item>
+        <item>Žlutá</item>
+        <item>Zelená</item>
+        <item>Azúrová</item>
+        <item>Biela</item>
+        <item>Purpurová</item>
+    </string-array>		
     <string-array name="gemini_sim_info_number_display_format_entries">
         <item>První 4 číslice</item>
         <item>Poslední 4 číslice</item>
         <item>Nezobrazuj</item>
+    </string-array>
+    <string-array name="gemini_sim_info_number_display_format_values">
+        <item>1</item>
+        <item>2</item>
+        <item>0</item>
     </string-array>
     <string-array name="gemini_sim_roaming_reminder_entries">
         <item>Iba raz</item>
         <item>Vždy</item>
         <item>Nikdy</item>
     </string-array>
+    <string-array name="gemini_sim_roaming_reminder_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
     <string-array name="gsm_umts_network_preferences_choices">
         <item>GSM/WCDMA (auto.mód)</item>
         <item>len WCDMA</item>
         <item>len GSM</item>
+    </string-array>
+    <string-array name="gsm_umts_network_preferences_values">
+        <item>0</item>
+        <item>2</item>
+        <item>1</item>
     </string-array>
     <array name="wifi_security_wfa">
         <item>@string/wifi_security_none</item>
@@ -395,6 +569,11 @@
         <item>Auto</item>
         <item>720P</item>
         <item>480P</item>
+    </string-array>
+    <string-array name="hdmi_video_resolution_entry_values">
+        <item>2</item>
+        <item>1</item>
+        <item>0</item>
     </string-array>
     <string-array name="auto_time_entries">
         <item>Použij sítí poskytnutý čas</item>
@@ -447,35 +626,23 @@
         <item>Vypni pokud se nepoužívá 5 min</item>
         <item>Vypni pokud se nepoužívá 10 min</item>
     </string-array>
+    <string-array name="wifi_hotspot_disable_policy_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
     <string-array name="input_method_selector_titles">
         <item>@string/input_method_selector_show_automatically_title</item>
         <item>@string/input_method_selector_always_show_title</item>
         <item>@string/input_method_selector_always_hide_title</item>
     </string-array>
+    <string-array name="input_method_selector_values">
+        <item>@string/input_method_selector_show_automatically_value</item>
+        <item>@string/input_method_selector_always_show_value</item>
+        <item>@string/input_method_selector_always_hide_value</item>
+    </string-array>
     <string-array name="apn_type_orange_tethering_only">
         <item>tethering</item>
-    </string-array>
-    <string-array name="hdmi_video_resolution_entries_8193">
-        <item>Auto</item>
-        <item>720p_60Hz</item>
-        <item>720p_50Hz</item>
-        <item>1080p_24Hz</item>
-    </string-array>
-    <string-array name="hdmi_video_mode_entries">
-        <item>Celá obrazovka</item>
-        <item>Nejlépe přizpůsobit</item>
-        <item>Originální velikost</item>
-    </string-array>
-    <string-array name="hdmi_color_space_entries">
-        <item>RGB</item>
-        <item>YCbCr444</item>
-        <item>YCbCr422</item>
-    </string-array>
-    <string-array name="hdmi_deep_color_entries">
-        <item>8bit</item>
-        <item>Auto</item>
-        <item>10 bit</item>
-        <item>12 bit</item>
     </string-array>
     <string-array name="wifi_WEP_index">
         <item>1</item>
@@ -490,31 +657,13 @@
     </string-array>
     <string-array name="tethered_ipv6_entries">
         <item>IPv4</item>
-        <item>IPv4 &amp; IPv6</item>
+        <item>IPv4 &amp;amp; IPv6</item>
     </string-array>
-    <string-array name="usb_tether_type_entries">
-        <item>Windows(RNDIS)</item>
-        <item>Linux/Mac OS(EEM)</item>
+    <string-array name="tethered_ipv6_values">
+        <item>0</item>
+        <item>1</item>
     </string-array>
-    <string-array name="wifi_ap_wps_mode_entries">
-        <item>Push tlačidlo</item>
-        <item>PIN od klienta</item>
-    </string-array>
-    <string-array name="wifi_ap_max_connection_entries">
-        <item>1 uživatet</item>
-        <item>2 uživatelé</item>
-        <item>3 uživatelé</item>
-        <item>4 uživatelé</item>
-        <item>5 uživatelé</item>
-        <item>6 uživatelé</item>
-        <item>7 uživatelé</item>
-        <item>8 uživatelé</item>
-    </string-array>
-	<string-array name="simguide_datauseage">
-        <item>MB/Měsíc</item>
-        <item>GB/Měsíc</item>
-    </string-array>
-	    <string-array name="alarm_set">
+    <string-array name="alarm_set">
         <item>Zapnutí je nastaveno na méně než 1 minutu od teď.</item>
         <item>Zapnutí je nastaveno na %1$s od teď.</item>
         <item>Zapnutí je nastaveno na %2$s od teď.</item>
@@ -531,5 +680,116 @@
         <item>Vypnutí je nastaveno na %1$s a %3$s od teď.</item>
         <item>Vypnutí je nastaveno na %2$s a %3$s od teď.</item>
         <item>Vypnutí je nastaveno na %1$s, %2$s, a %3$s od teď.</item>
+    </string-array>
+    <string-array name="enable_opengl_traces_values">
+        <item>0</item>
+        <item>1</item>
+        <item>systrace</item>
+        <item>chyba</item>
+    </string-array>
+    <string-array name="security_settings_premium_sms_values">
+        <item>Ptát se</item>
+        <item>Nikdy nepovolit</item>
+        <item>Vždy povolit</item>
+    </string-array>
+    <string-array name="hdmi_video_mode_entries">
+        <item>Celá obrazovka</item>
+        <item>Nejlépe přizpůsobit</item>
+        <item>Originální velikost</item>
+    </string-array>
+    <string-array name="wifi_ap_wps_mode_entries">
+        <item>Push tlačidlo</item>
+        <item>PIN od klienta</item>
+    </string-array>
+    <string-array name="wifi_ap_wps_mode_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+    <string-array name="wifi_ap_max_connection_entries">
+        <item>1 uživatet</item>
+        <item>2 uživatelé</item>
+        <item>3 uživatelé</item>
+        <item>4 uživatelé</item>
+        <item>5 uživatelé</item>
+        <item>6 uživatelé</item>
+        <item>7 uživatelé</item>
+        <item>8 uživatelé</item>
+    </string-array>
+    <string-array name="overlay_display_devices_entries">
+        <item>None</item>
+        <item>720x480 mdpi</item>
+        <item>1280x720 tvdpi</item>
+        <item>1920x1080 xhdpi</item>
+        <item>1280x720 tvdpi and 1920x1080 xhdpi</item>
+    </string-array>
+    <string-array name="overlay_display_devices_values">
+        <item></item>
+        <item>720x480/160</item>
+        <item>1280x720/213</item>
+        <item>1920x1080/320</item>
+        <item>1280x720/213;1920x1080/320</item>
+    </string-array>
+    <string-array name="enable_opengl_traces_entries">
+        <item>None</item>
+        <item>Logcat</item>
+        <item>Systrace (Graphics)</item>
+        <item>Call stack on glGetError</item>
+    </string-array>
+    <string-array name="hdmi_video_resolution_entries_8193">
+        <item>Auto</item>
+        <item>720p_60Hz</item>
+        <item>720p_50Hz</item>
+        <item>1080p_24Hz</item>
+    </string-array>
+    <string-array name="hdmi_video_resolution_entry_values_8193">
+        <item>100</item>
+        <item>2</item>
+        <item>3</item>
+        <item>8</item>
+    </string-array>
+    <string-array name="hdmi_video_mode_entry_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+    <string-array name="hdmi_color_space_entries">
+        <item>RGB</item>
+        <item>YCbCr444</item>
+        <item>YCbCr422</item>
+    </string-array>
+    <string-array name="hdmi_color_space_entry_values">
+        <item>0</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+    <string-array name="hdmi_deep_color_entries">
+        <item>8bit</item>
+        <item>Auto</item>
+        <item>10 bit</item>
+        <item>12 bit</item>
+    </string-array>
+    <string-array name="hdmi_deep_color_entry_values">
+        <item>1</item>
+        <item>0</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+    <string-array name="usb_tether_type_entries">
+        <item>Windows(RNDIS)</item>
+        <item>Linux/Mac OS(EEM)</item>
+    </string-array>
+    <string-array name="usb_tether_type_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+    <string-array name="wifi_ap_max_connection_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
     </string-array>
 </resources>
