--- a/main/Settings.apk/res/values-cs/plurals.xml
+++ b/main/Settings.apk/res/values-cs/plurals.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
+<resources>
     <plurals name="lockpassword_password_requires_letters">
-        <item quantity="other">Heslo musí obsahovat alespoň %d písmen.</item>
-        <item quantity="one">Heslo musí obsahovat alespoň 1 písmeno.</item>
+        <item quantity="other">Požadovaný minimální počet písmen v heslu: %d.</item>
+        <item quantity="one">Heslo musí obsahovat nejméně jedno písmeno.</item>
     </plurals>
     <plurals name="lockpassword_password_requires_lowercase">
-        <item quantity="other">Heslo musí obsahovat alespoň %d malých písmen.</item>
-        <item quantity="one">Heslo musí obsahovat alespoň 1 malé písmeno.</item>
+        <item quantity="other">Požadovaný minimální počet malých písmen v heslu: %d.</item>
+        <item quantity="one">Heslo musí obsahovat nejméně jedno malé písmeno.</item>
     </plurals>
     <plurals name="lockpassword_password_requires_uppercase">
-        <item quantity="other">Heslo musí obsahovat alespoň %d velkých písmen.</item>
-        <item quantity="one">Heslo musí obsahovat alespoň %d velké písmeno.</item>
+        <item quantity="other">Požadovaný minimální počet velkých písmen v heslu: %d.</item>
+        <item quantity="one">Heslo musí obsahovat nejméně jedno velké písmeno.</item>
     </plurals>
     <plurals name="lockpassword_password_requires_numeric">
-        <item quantity="other">Heslo musí obsahovat alespoň %d číslic.</item>
-        <item quantity="one">Heslo musí obsahovat alespoň 1 číslici.</item>
+        <item quantity="other">Požadovaný minimální počet číslic v heslu: %d.</item>
+        <item quantity="one">Heslo musí obsahovat alespoň jednu číslici.</item>
     </plurals>
     <plurals name="lockpassword_password_requires_symbols">
-        <item quantity="other">Heslo musí obsahovat alespoň %d zvláštních symbolů.</item>
-        <item quantity="one">Heslo musí obsahovat alespoň 1 zvláštní symbol.</item>
+        <item quantity="other">Požadovaný minimální počet zvláštních symbolů v heslu: %d.</item>
+        <item quantity="one">Heslo musí obsahovat nejméně jeden zvláštní symbol.</item>
     </plurals>
     <plurals name="lockpassword_password_requires_nonletter">
-        <item quantity="other">Heslo musí obsahovat alespoň %d znaků.</item>
-        <item quantity="one">Heslo musí obsahovat alespoň1 znak.</item>
+        <item quantity="other">Požadovaný minimální počet nepísmenných znaků v heslu: %d.</item>
+        <item quantity="one">Heslo musí obsahovat nejméně jeden znak jiný než písmeno.</item>
     </plurals>
 </resources>
