--- a/main/Settings.apk/res/values-sk/arrays.xml
+++ b/main/Settings.apk/res/values-sk/arrays.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
-	<string-array name="nightmode_entries">
-		<item>čierna</item>
-		<item>červená</item>
-		<item>žltá</item>
-	</string-array>
+<resources>
     <string-array name="timezone_filters">
         <item>Amerika</item>
         <item>Európa</item>
@@ -13,6 +8,15 @@
         <item>Austrália</item>
         <item>Pacifik</item>
         <item>Všetky</item>
+    </string-array>
+    <string-array name="date_format_values">
+        <item></item>
+        <item>MM-dd-yyyy</item>
+        <item>dd-MM-yyyy</item>
+        <item>yyyy-MM-dd</item>
+        <item>EE-MMM-d-yyyy</item>
+        <item>EE-d-MMM-yyyy</item>
+        <item>yyyy-MMM-d-EE</item>
     </string-array>
     <string-array name="screen_timeout_entries">
         <item>15 sekúnd</item>
@@ -50,12 +54,6 @@
         <item>Veľká</item>
         <item>Extra veľká</item>
     </string-array>
-    <string-array name="entryvalues_font_size">
-        <item>0.9</item>
-        <item>1.0</item>
-        <item>1.1</item>
-        <item>1.15</item>
-    </string-array>
     <string-array name="tts_rate_entries">
         <item>Veľmi pomaly</item>
         <item>Pomaly</item>
@@ -69,20 +67,6 @@
         <item>Stredne</item>
         <item>Rýchlo</item>
         <item>Veľmi rýchlo</item>
-    </string-array>
-    <string-array name="tts_demo_strings">
-        <item>This is an example of speech synthesis in English.</item>
-        <item>Voici un échantillon de synthèse vocale en français.</item>
-        <item>Dies ist ein Beispiel für Sprachsynthese in Deutsch.</item>
-        <item>Questo è un esempio di sintesi vocale in italiano.</item>
-        <item>Este es un ejemplo de síntesis de voz en español.</item>
-    </string-array>
-    <string-array name="tts_demo_string_langs">
-        <item>eng</item>
-        <item>fra</item>
-        <item>deu</item>
-        <item>ita</item>
-        <item>spa</item>
     </string-array>
     <string-array name="wifi_status">
         <item></item>
@@ -111,29 +95,6 @@
         <item>Neúspešné</item>
         <item>Blokované</item>
         <item>Dočasne zabraňujem slabému spojeniu</item>
-    </string-array>
-    <string-array name="wifi_security">
-        <item>@string/wifi_security_none</item>
-        <item>@string/wifi_security_wep</item>
-        <item>@string/wifi_security_psk_generic</item>
-        <item>@string/wifi_security_eap</item>
-        <item>WAPI PSK</item>
-        <item>WAPI Certificate</item>
-    </string-array>
-    <string-array name="wifi_security_no_eap">
-        <item>@string/wifi_security_none</item>
-        <item>@string/wifi_security_wep</item>
-        <item>@string/wifi_security_psk_generic</item>
-    </string-array>
-    <array name="wifi_ap_security">
-        <item>@string/wifi_security_none</item>
-        <item>WPA PSK</item>
-        <item>WPA2 PSK</item>
-    </array>
-    <string-array name="wifi_eap_method">
-        <item>PEAP</item>
-        <item>TLS</item>
-        <item>TTLS</item>
     </string-array>
     <string-array name="wifi_p2p_wps_setup">
         <item>Push tlačidlo</item>
@@ -179,18 +140,6 @@
         <item>Počet spustení</item>
         <item>Meno apl.</item>
     </string-array>
-    <string-array name="wifi_eap_entries">
-        <item>PEAP</item>
-        <item>TLS</item>
-        <item>TTLS</item>
-    </string-array>
-    <string-array name="wifi_phase2_entries">
-        <item>None</item>
-        <item>PAP</item>
-        <item>MSCHAP</item>
-        <item>MSCHAPV2</item>
-        <item>GTC</item>
-    </string-array>
     <string-array name="wifi_ip_settings">
         <item>DHCP</item>
         <item>Statická</item>
@@ -208,29 +157,14 @@
         <item>zh_CN</item>
         <item>zh_TW</item>
     </string-array>
-    <string-array name="special_locale_names">
-        <item>中文 (简体)</item>
-        <item>中文 (繁體)</item>
-    </string-array>
-    <string-array name="apn_auth_entries">
-        <item>None</item>
-        <item>PAP</item>
-        <item>CHAP</item>
-        <item>PAP alebo CHAP</item>
-    </string-array>
-    <string-array name="apn_protocol_entries">
-        <item>IPv4</item>
-        <item>IPv6</item>
-        <item>IPv4/IPv6</item>
-    </string-array>
     <string-array name="bearer_entries">
         <item>LTE</item>
         <item>eHRPD</item>
         <item>Nešpecifikované</item>
     </string-array>
     <string-array name="app_install_location_entries">
-        <item>Vnútorná pamäť telefónu</item>
-        <item>SD karta</item>
+        <item>Vnútorná pamäť</item>
+        <item>"SD karta "</item>
         <item>Systém sa rozhodne</item>
     </string-array>
     <string-array name="long_press_timeout_selector_titles">
@@ -250,12 +184,12 @@
     </string-array>
     <string-array name="window_animation_scale_entries">
         <item>Animation vypnutá</item>
-        <item>Animácia mierka  .5x</item>
-        <item>Animácia mierka  1x</item>
-        <item>Animácia mierka  1.5x</item>
-        <item>Animácia mierka  2x</item>
-        <item>Animácia mierka  5x</item>
-        <item>Animácia mierka  10x</item>
+        <item>Animácia mierka .5x</item>
+        <item>Animácia mierka 1x</item>
+        <item>Animácia mierka 1.5x</item>
+        <item>Animácia mierka 2x</item>
+        <item>Animácia mierka 5x</item>
+        <item>Animácia mierka 10x</item>
     </string-array>
     <string-array name="transition_animation_scale_entries">
         <item>Animácia vypnutá</item>
@@ -275,19 +209,6 @@
         <item>Animácia mierka 5x</item>
         <item>Animácia mierka 10x</item>
     </string-array>
-    <string-array name="overlay_display_devices_entries">
-        <item>None</item>
-        <item>720x480 mdpi</item>
-        <item>1280x720 tvdpi</item>
-        <item>1920x1080 xhdpi</item>
-        <item>1280x720 tvdpi and 1920x1080 xhdpi</item>
-    </string-array>
-    <string-array name="enable_opengl_traces_entries">
-        <item>None</item>
-        <item>Logcat</item>
-        <item>Systrace (Graphics)</item>
-        <item>Call stack on glGetError</item>
-    </string-array>
     <string-array name="app_process_limit_entries">
         <item>Štandardný limit</item>
         <item>Žiadne procesy na pozadí</item>
@@ -295,22 +216,6 @@
         <item>Najviac 2 procesy</item>
         <item>Najviac 3 procesy</item>
         <item>Najviac 4 procesy</item>
-    </string-array>
-    <string-array name="vpn_types">
-        <item>PPTP</item>
-        <item>L2TP/IPSec PSK</item>
-        <item>L2TP/IPSec RSA</item>
-        <item>IPSec Xauth PSK</item>
-        <item>IPSec Xauth RSA</item>
-        <item>IPSec Hybrid RSA</item>
-    </string-array>
-    <string-array name="vpn_types_long">
-        <item>PPTP VPN</item>
-        <item>L2TP/IPSec VPN with pre-shared keys</item>
-        <item>L2TP/IPSec VPN with certificates</item>
-        <item>IPSec VPN with pre-shared keys and Xauth authentication</item>
-        <item>IPSec VPN with certificates and Xauth authentication</item>
-        <item>IPSec VPN with certificates and hybrid authentication</item>
     </string-array>
     <string-array name="vpn_states">
         <item>Odpojený</item>
@@ -327,24 +232,53 @@
         <item>Šimpanz</item>
         <item>Opica</item>
     </string-array>
-    <string-array name="security_settings_premium_sms_values">
-        <item>Pýtať sa</item>
-        <item>Nikdy nepovoliť</item>
-        <item>Vždy povoliť</item>
+    <string-array name="nightmode_entries">
+        <item>čierna</item>
+        <item>červená</item>
+        <item>žltá</item>
     </string-array>
-    <string-array name="battery_style_entries">
-        <item>Grafika</item>
-        <item>Percento</item>
+    <string-array name="simguide_datauseage">
+        <item>MB/Mesiac</item>
+        <item>GB/Mesiac</item>
     </string-array>
-    <string-array name="core_nums_strs">
-        <item>Single-core</item>
-        <item>Dual-core</item>
-        <item>Quad-core</item>
+    <string-array name="led_freq_entries">
+        <item>2 sekundy</item>
+        <item>3 sekundy</item>
+        <item>4 sekundy</item>
+        <item>5 sekundy</item>
+        <item>6 sekundy</item>
+        <item>7 sekundy</item>
+        <item>8 sekundy</item>
+        <item>9 sekundy</item>
     </string-array>
-    <string-array name="dualsim_summaries">
-        <item>SIM 1</item>
-        <item>SIM 2</item>
+    <string-array name="led_freq_values">
+        <item>2000</item>
+        <item>3000</item>
+        <item>4000</item>
+        <item>5000</item>
+        <item>6000</item>
+        <item>7000</item>
+        <item>8000</item>
+        <item>9000</item>
     </string-array>
+    <string-array name="led_color_values">
+        <item>blue</item>
+        <item>red</item>
+        <item>yellow</item>
+        <item>green</item>
+        <item>cyan</item>
+        <item>white</item>
+        <item>\#FFAA00AA</item>
+    </string-array>
+    <string-array name="led_color_entries">
+        <item>Modrá</item>
+        <item>Červená</item>
+        <item>Žltá</item>
+        <item>Zelená</item>
+        <item>Azúrová</item>
+        <item>Biela</item>
+        <item>Purpurová</item>
+    </string-array>		
     <string-array name="gemini_sim_info_number_display_format_entries">
         <item>Prvé 4 číslice</item>
         <item>Posledné 4 číslice</item>
@@ -355,47 +289,6 @@
         <item>Vždy</item>
         <item>Nikdy</item>
     </string-array>
-    <string-array name="gsm_umts_network_preferences_choices">
-        <item>GSM/WCDMA (auto.mód)</item>
-        <item>len WCDMA</item>
-        <item>len GSM</item>
-    </string-array>
-    <array name="wifi_security_wfa">
-        <item>@string/wifi_security_none</item>
-        <item>WEP</item>
-        <item>WPA PSK</item>
-        <item>WPA2 PSK</item>
-        <item>802.1x EAP</item>
-        <item>WAPI PSK</item>
-        <item>WAPI Certificate</item>
-    </array>
-    <string-array name="wifi_ap_channel_width">
-        <item>20 MHz</item>
-        <item>Auto 20/40 MHz</item>
-    </string-array>
-    <array name="wpa_security">
-        <item>@string/wifi_security_none</item>
-        <item>WEP</item>
-        <item>WPA/WPA2 PSK</item>
-        <item>802.1x EAP</item>
-    </array>
-    <array name="wpa_security_wfa">
-        <item>@string/wifi_security_none</item>
-        <item>WEP</item>
-        <item>WPA PSK</item>
-        <item>WPA2 PSK</item>
-        <item>802.1x EAP</item>
-    </array>
-    <array name="wapi_security">
-        <item>@string/wifi_security_none</item>
-        <item>WAPI PSK</item>
-        <item>WAPI Certificate</item>
-    </array>
-    <string-array name="hdmi_video_resolution_entries">
-        <item>Auto</item>
-        <item>720P</item>
-        <item>480P</item>
-    </string-array>
     <string-array name="auto_time_entries">
         <item>Použi sieťou poskytnutý čas</item>
         <item>Použi GPS poskytnutý čas</item>
@@ -404,38 +297,6 @@
     <string-array name="network_use_entry">
         <item>Len domáca sieť</item>
         <item>Domáca + roaming</item>
-    </string-array>
-    <string-array name="tvout_system_list">
-        <item>PAL</item>
-        <item>NTSC</item>
-    </string-array>
-    <string-array name="apn_type_generic">
-        <item>default</item>
-        <item>mms</item>
-        <item>supl</item>
-        <item>wap</item>
-    </string-array>
-    <string-array name="apn_type_cmcc">
-        <item>default</item>
-        <item>mms</item>
-        <item>supl</item>
-        <item>wap</item>
-        <item>net</item>
-        <item>cmmail</item>
-    </string-array>
-    <string-array name="apn_type_orange">
-        <item>default</item>
-        <item>mms</item>
-        <item>supl</item>
-        <item>wap</item>
-        <item>tethering</item>
-    </string-array>
-    <string-array name="wifi_eap_method_sim_aka">
-        <item>PEAP</item>
-        <item>TLS</item>
-        <item>TTLS</item>
-        <item>SIM</item>
-        <item>AKA</item>
     </string-array>
     <string-array name="sim_slot">
         <item>(nešpecifikované)</item>
@@ -447,74 +308,7 @@
         <item>Vypni ak sa nepoužíva 5 min</item>
         <item>Vypni ak sa nepoužíva 10 min</item>
     </string-array>
-    <string-array name="input_method_selector_titles">
-        <item>@string/input_method_selector_show_automatically_title</item>
-        <item>@string/input_method_selector_always_show_title</item>
-        <item>@string/input_method_selector_always_hide_title</item>
-    </string-array>
-    <string-array name="apn_type_orange_tethering_only">
-        <item>tethering</item>
-    </string-array>
-    <string-array name="hdmi_video_resolution_entries_8193">
-        <item>Auto</item>
-        <item>720p_60Hz</item>
-        <item>720p_50Hz</item>
-        <item>1080p_24Hz</item>
-    </string-array>
-    <string-array name="hdmi_video_mode_entries">
-        <item>Celá obrazovka</item>
-        <item>Najlepšie prispôsobiť</item>
-        <item>Originál veľkosť</item>
-    </string-array>
-    <string-array name="hdmi_color_space_entries">
-        <item>RGB</item>
-        <item>YCbCr444</item>
-        <item>YCbCr422</item>
-    </string-array>
-    <string-array name="hdmi_deep_color_entries">
-        <item>8bit</item>
-        <item>Auto</item>
-        <item>10 bit</item>
-        <item>12 bit</item>
-    </string-array>
-    <string-array name="wifi_WEP_index">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-    </string-array>
-    <string-array name="wifi_WEP_security_type">
-        <item>Auto</item>
-        <item>WEP ASCII</item>
-        <item>WEP hexadecimal</item>
-    </string-array>
-    <string-array name="tethered_ipv6_entries">
-        <item>IPv4</item>
-        <item>IPv4 &amp; IPv6</item>
-    </string-array>
-    <string-array name="usb_tether_type_entries">
-        <item>Windows(RNDIS)</item>
-        <item>Linux/Mac OS(EEM)</item>
-    </string-array>
-    <string-array name="wifi_ap_wps_mode_entries">
-        <item>Push tlačidlo</item>
-        <item>PIN od klienta</item>
-    </string-array>
-    <string-array name="wifi_ap_max_connection_entries">
-        <item>1 užívateľ</item>
-        <item>2 užívatelia</item>
-        <item>3 užívatelia</item>
-        <item>4 užívatelia</item>
-        <item>5 užívatelia</item>
-        <item>6 užívatelia</item>
-        <item>7 užívatelia</item>
-        <item>8 užívatelia</item>
-    </string-array>
-	<string-array name="simguide_datauseage">
-        <item>MB/Mesiac</item>
-        <item>GB/Mesiac</item>
-    </string-array>
-	    <string-array name="alarm_set">
+    <string-array name="alarm_set">
         <item>Zapnutie je nastavené na menej ako 1 minútu od teraz.</item>
         <item>Zapnutie je nastavené na %1$s od teraz.</item>
         <item>Zapnutie je nastavené na %2$s od teraz.</item>
@@ -531,5 +325,39 @@
         <item>Vypnutie je nastavené na %1$s a %3$s od teraz.</item>
         <item>Vypnutie je nastavené na %2$s a %3$s od teraz.</item>
         <item>Vypnutie je nastavené na %1$s, %2$s, a %3$s od teraz.</item>
+    </string-array>
+    <string-array name="enable_opengl_traces_values">
+        <item>0</item>
+        <item>1</item>
+        <item>systrace</item>
+        <item>chyba</item>
+    </string-array>
+    <string-array name="security_settings_premium_sms_values">
+        <item>Pýtať sa</item>
+        <item>Nikdy nepovoliť</item>
+        <item>Vždy povoliť</item>
+    </string-array>
+    <string-array name="hdmi_video_mode_entries">
+        <item>Celá obrazovka</item>
+        <item>Najlepšie prispôsobiť</item>
+        <item>Originál veľkosť</item>
+    </string-array>
+    <string-array name="wifi_ap_wps_mode_entries">
+        <item>Push tlačidlo</item>
+        <item>PIN od klienta</item>
+    </string-array>
+    <string-array name="wifi_ap_wps_mode_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+    <string-array name="wifi_ap_max_connection_entries">
+        <item>1 užívateľ</item>
+        <item>2 užívatelia</item>
+        <item>3 užívatelia</item>
+        <item>4 užívatelia</item>
+        <item>5 užívatelia</item>
+        <item>6 užívatelia</item>
+        <item>7 užívatelia</item>
+        <item>8 užívatelia</item>
     </string-array>
 </resources>
